--- a/zxcv-busi/src/main/resources/templates/serviceImpl.java.vm
+++ b/zxcv-busi/src/main/resources/templates/serviceImpl.java.vm
@@ -9,6 +9,7 @@ import com.zxcv.api.commom.base.ErrorType;
 import com.zxcv.api.commom.bean.BizResult;
 import com.zxcv.api.commom.bean.PageBean;
 import com.zxcv.api.commom.exception.BizException;
+import com.alibaba.dubbo.common.utils.CollectionUtils;
 
 import ${cfg.dtoPath};
 import ${cfg.queryPath};
@@ -93,9 +94,11 @@ public class ${table.serviceImplName}  implements ${table.serviceName.substring(
      @Override
      public BizResult<Integer> delete${table.entityName}(SaveAndModify${table.entityName}Req req) {
          logger.info("begin调用$!{table.comment}service层delete()方法,入参={}", JSONObject.toJSON(req));
-         ${table.entityName} ${entityName} = new ${table.entityName}();
          if (req == null) {
              throw new BizException(ErrorType.PARAMM_NULL, "入参为空!");
+         }
+         if (CollectionUtils.isEmpty(req.getIds())) {
+             throw new BizException(ErrorType.PARAMM_NULL, "id为空!");
          }
 		 int deleteCount = ${mapperName}.delete${table.entityName}(req);
          logger.info("end调用$!{table.comment}service层delete()方法,删除条数=【{}】条。", deleteCount);
@@ -114,9 +117,8 @@ public class ${table.serviceImplName}  implements ${table.serviceName.substring(
      public BizResult<${table.entityName}DTO> select${table.entityName}(Query${table.entityName}Req req) {
          logger.info("begin调用$!{table.comment}service层查询对象()方法,入参={}", JSONObject.toJSON(req));
          ${table.entityName}DTO ${entityName}DTO = new ${table.entityName}DTO();
-         ${table.entityName} ${entityName}Query = new ${table.entityName}();
-         if (req == null) {
-             throw new BizException(ErrorType.PARAMM_NULL, "入参为空!");
+         if (req == null || null == req.getId()) {
+             throw new BizException(ErrorType.PARAMM_NULL, "id为空!");
          }
          ${table.entityName} obj = ${mapperName}. select${table.entityName}(req);
          if (null != obj) {
@@ -141,12 +143,11 @@ public class ${table.serviceImplName}  implements ${table.serviceName.substring(
          if (req == null) {
              throw new BizException(ErrorType.PARAMM_NULL, "入参为空!");
          }
-         //TODO自定义查询条件
 	     IPage<${table.entityName}> pageInfo = ${mapperName}.query${table.entityName}ForPage(req);
          if (null != pageInfo) {
              PageBeanUtil.copyProperties(pageInfo, pageBean, ${table.entityName}DTO.class);
          }
-         logger.info("end调用service-查询$!{table.comment}列表分页()方法,查询条数={}条。", pageBean.getPageTotals());
+         logger.info("end调用service-查询$!{table.comment}列表分页()方法,查询条数={}条。", pageBean.getTotal());
          return new BizResult<PageBean<${table.entityName}DTO>>(pageBean);
      }
 }
